--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="dark-bg">
+<footer>
     <div class="footer-link-container">
         <a class="footer-link light-txt font-1" href="https://www.eranewlin.com/">ERA Newlin website</a>
         <a class="footer-link light-txt font-1" href="https://www.eranewlin.com/agents/1004557/Ryan+Newlin">our broker</a>
