--- a/public/styles/article.css
+++ b/public/styles/article.css
@@ -1,5 +1,8 @@
 
 /* _General Element Classes and IDs_ */
+.section-margin-top {
+    margin-top: 7rem;
+}
 .section-header {
     text-align: center;
     font-family: sans-serif;
@@ -16,21 +19,20 @@
     width: 100%;
 }
 .featured-areas-container {
-    display: grid;
-    grid-template-columns: 50% 50%;
-    gap: 0.2rem;
-    /* justify-content: center; */
+    display: flex;
+    flex-direction: column;
 }
 .featured-area-cards {
     display: flex;
     align-items: center;
     width: 100%;
-    aspect-ratio: 1/1;
+    aspect-ratio: 4/1;
     background-position: center;
     background-size: cover;
     text-decoration-line: none;
     opacity: 1;
     transition: 150ms ease-in-out;
+    border-bottom: 1px solid gray;
 }
 .featured-area-cards:hover {
     opacity: 0.7;
@@ -68,9 +70,7 @@
     text-align: center;
 }
 
-/* #team-section {
-  
-} */
+
 .team-card-container {
     display: flex;
     justify-content: center;
