--- a/public/styles/footer.css
+++ b/public/styles/footer.css
@@ -1,13 +1,10 @@
-.bg-footer {
-    background: linear-gradient(to top, black, var(--text));
-}
-
 footer {
     padding: 4rem 3rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: space-between;
     gap: 2rem;
+    background-color: black;
 }
 
 .footer-link-container {
