--- a/views/partials/article.ejs
+++ b/views/partials/article.ejs
@@ -1,17 +1,13 @@
 <article class="bg">
-    <section id="featured-areas-section">
+    <section id="featured-areas-section" class="section-margin-top">
         <h2 class="section-header txt">Featured Areas</h2>
         <div class="featured-areas-container container">
-            <a href="#" class="featured-area-cards santa-rita soft-edges box-shadow">
-               
-            </a>
-            <a href="#" class="featured-area-cards buffalo-heights soft-edges box-shadow">
-                
-            </a>
+            <a href="#" class="featured-area-cards santa-rita box-shadow"></a>
+            <a href="#" class="featured-area-cards buffalo-heights box-shadow"></a>
         </div>
     </section>
 
-    <section id="reviews-section">
+    <section id="reviews-section" class="section-margin-top">
         <h2 class="section-header txt">Reviews</h2>
         <div class="reviews-container container box-shadow soft-edges bg">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci eum provident sequi in! 
@@ -20,7 +16,7 @@
         </div>
     </section>
 
-    <section id="team-section">
+    <section id="team-section" class="section-margin-top">
         <h2 class="section-header txt">Our Team</h2>
         <div class="team-card-container">
             <div class="team-cards box-shadow" id="amy">
@@ -41,8 +37,8 @@
         </div>
     </section>
 
-    <section id="contact-section" class="box-shadow bg-accent">
-        <h2 class="section-header txt">Contact Us</h2>
+    <section id="contact-section" class="box-shadow bg-accent section-margin-top dark-bg">
+        <h2 class="section-header light-txt">Contact Us</h2>
         <div class="contact-form-container container">
             <form class="contact-form" action="/submit-contact" method="post">
                 <input type="text" name="first-name" id="first-name" placeholder="firstname">
@@ -50,7 +46,7 @@
                 <input type="email" name="email" id="email" placeholder="email">
                 <input type="number" name="number" id="number" placeholder="phone#">
                 <input type="checkbox" name="subscribe-checkbox" id="subscribe-checkbox">
-                <label id="subscribe-checkbox-label" class="txt" for="subscribe-checkbox">Subscribe to our newsletter?</label>
+                <label id="subscribe-checkbox-label" class="light-txt" for="subscribe-checkbox">Subscribe to our newsletter?</label>
                 <textarea name="contact-body" id="contact-body"></textarea>
                 <input id="submit" class="txt" type="submit" value="submit">
             </form>
